[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infotv"
dynamic = ["version"]
description = "A television, with information"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kehittyvien conien Suomi ry" },
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.2",
    "jsonfield>=1.0.3",
    "requests>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/kcsry/infotv"

[tool.hatch.version]
path = "infotv/__init__.py"

[tool.hatch.build]
artifacts = [
    "infotv/static",
]

[tool.hatch.build.targets.sdist]
include = [
    "/infotv",
]
exclude = [
    "/infotv/static/infotv",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "infotv/frontend",
]

[tool.ruff]
target-version = "py37"
line-length = 120
mccabe.max-complexity = 10
flake8-tidy-imports.ban-relative-imports = "all"
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "RET",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
]
ignore = [
    "RET504",
    "SIM105",
]

[tool.ruff.per-file-ignores]
"infotv_test/**" = ["ANN"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "infotv_test.settings"
norecursedirs = ["bower_components", "node_modules", ".git", "venv", "site-packages"]
